--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,11 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  url_launcher: ^6.1.5
-  walletconnect_dart: ^0.0.11
-  google_fonts: ^3.0.1
-  slider_button: ^2.0.0
-  web3dart: ^2.3.5
+  url_launcher:
+  walletconnect_dart:
+  google_fonts:
+  slider_button:
+  web3dart:
 
 dev_dependencies:
   flutter_test:
